fix: make team names smaller on mobile;

--- a/www-symfony/sass/style.scss
+++ b/www-symfony/sass/style.scss
@@ -110,6 +110,9 @@ body .match-item-mobile {
         overflow: hidden;
         text-overflow: ellipsis;
     }
+    @media screen and (max-width: 400px) {
+        font-size: 10px;
+    }
 
     &.left-sided {
         float: left;
